# splic

./: .gitignore  AGENTS.md  Cargo.toml  README.md  examples  justfile
cli/: Cargo.toml
cli/src/: main.rs
compiler/: Cargo.toml  build.rs
compiler/src/: ast.rs  lexer.rs  lib.rs
compiler/src/checker/: ctx.rs  elaborate.rs  infer.rs  mod.rs
compiler/src/checker/test/: apply.rs  context.rs  helpers.rs  literal.rs  locals.rs  matching.rs  meta.rs  mod.rs  signatures.rs  snap.rs  var.rs
compiler/src/checker/test/snap/: code_fn.input.txt  code_fn.snap.txt  let_fn.snap.txt  power.input.txt  power.snap.txt  simple_fn.input.txt  simple_fn.snap.txt  splice_meta_int.snap.txt  staging.input.txt  staging.snap.txt
compiler/src/common/: de_bruijn.rs  env.rs  mod.rs  name.rs  operators.rs  phase.rs
compiler/src/core/: alpha_eq.rs  mod.rs  pretty.rs  prim.rs  subst.rs  value.rs
compiler/src/eval/: mod.rs
compiler/src/eval/test/: mod.rs  snap.rs
compiler/src/eval/test/snap/: mixed_let.snap.txt  power.snap.txt  power_simple.input.txt  power_simple.snap.txt  splice_meta_int.snap.txt  staging.snap.txt  sum_n.input.txt  sum_n.snap.txt
compiler/src/lexer/: mod.rs  testutils.rs  token.rs
compiler/src/lexer/test/: fuzz.rs  mod.rs
compiler/src/lexer/test/lex/: binary_ops.snap.txt  invalid_char_in_expr.input.txt  invalid_char_in_expr.snap.txt  match.snap.txt  primitives.snap.txt  staging.snap.txt  unexpected_char.snap.txt
compiler/src/parser/: ast.rs  mod.rs
compiler/src/parser/test/: mod.rs
compiler/src/parser/test/expr/: app.snap.txt  bang.snap.txt  bang_binary.input.txt  bang_binary.snap.txt  bang_double.input.txt  bang_double.snap.txt  binary_add.snap.txt  block.snap.txt  complex.input.txt  complex.snap.txt  lam.input.txt  lam.snap.txt  lam_fn_param.input.txt  lam_fn_param.snap.txt  lam_ret_ty.input.txt  lam_ret_ty.snap.txt  let.input.txt  let.snap.txt  let_typed.input.txt  let_typed.snap.txt  lift.input.txt  lift.snap.txt  literal.snap.txt  match.input.txt  match.snap.txt  paren.snap.txt  paren_bang.input.txt  paren_bang.snap.txt  paren_prec.snap.txt  prec.snap.txt  quote.input.txt  quote.snap.txt  splice.input.txt  splice.snap.txt  var.snap.txt
compiler/src/parser/test/program/: code_fn.input.txt  id_fn.input.txt  id_fn.snap.txt  simple_fn.snap.txt  two_fns.input.txt  two_fns.snap.txt
compiler/src/staging/: mod.rs
compiler/src/test/: fuzz.rs  mod.rs
compiler/src/test/lex/: binary_ops.input.txt  comments.snap.txt  hello_world.input.txt  match.input.txt  staging.input.txt  staging.snap.txt
compiler/tests/: snap.rs
compiler/tests/snap/examples/add_overflow_u32/: 1_lex.txt  6_stage.txt
compiler/tests/snap/examples/add_overflow_u8/: 1_lex.txt
compiler/tests/snap/examples/mul_overflow_u8/: 3_check.txt  6_stage.txt
compiler/tests/snap/examples/power_acc/: 2_parse.txt  6_stage.txt
compiler/tests/snap/examples/power_simple/: 2_parse.txt
compiler/tests/snap/examples/sub_underflow_u8/: 1_lex.txt  6_stage.txt
compiler/tests/snap/examples/sum_n/: 3_check.txt
compiler/tests/snap/full/code_fn/: 1_lex.txt  2_parse.txt  3_check.txt
compiler/tests/snap/full/double/: 1_lex.txt  2_parse.txt  3_check.txt  6_stage.txt
compiler/tests/snap/full/id_fn/: 1_lex.txt  2_parse.txt  3_check.txt
compiler/tests/snap/full/let_fn/: 0_input.splic  1_lex.txt  2_parse.txt  3_check.txt
compiler/tests/snap/full/let_type/: 1_lex.txt  2_parse.txt  3_check.txt  6_stage.txt
compiler/tests/snap/full/mixed_let/: 0_input.splic  1_lex.txt  2_parse.txt  3_check.txt  6_stage.txt
compiler/tests/snap/full/nand/: 0_input.splic  2_parse.txt  3_check.txt
compiler/tests/snap/full/pi_apply_non_fn/: 0_input.splic  1_lex.txt  2_parse.txt  3_check.txt
compiler/tests/snap/full/pi_arity_mismatch/: 0_input.splic  1_lex.txt  2_parse.txt  3_check.txt
compiler/tests/snap/full/pi_arity_mismatch_lambda/: 2_parse.txt  3_check.txt
compiler/tests/snap/full/pi_arity_mismatch_lambda_too_many/: 0_input.splic  2_parse.txt  3_check.txt
compiler/tests/snap/full/pi_arity_mismatch_too_few/: 0_input.splic  1_lex.txt  2_parse.txt  3_check.txt
compiler/tests/snap/full/pi_basic/: 0_input.splic  1_lex.txt  2_parse.txt  3_check.txt
compiler/tests/snap/full/pi_compose/: 0_input.splic  1_lex.txt  2_parse.txt  3_check.txt  6_stage.txt
compiler/tests/snap/full/pi_const/: 0_input.splic  1_lex.txt  2_parse.txt  3_check.txt
compiler/tests/snap/full/pi_dependent_ret/: 0_input.splic  2_parse.txt  3_check.txt  6_stage.txt
compiler/tests/snap/full/pi_lambda_arg/: 0_input.splic  1_lex.txt  2_parse.txt  3_check.txt
compiler/tests/snap/full/pi_lambda_compose_let/: 0_input.splic  1_lex.txt  2_parse.txt  3_check.txt
compiler/tests/snap/full/pi_lambda_empty_params/: 0_input.splic  2_parse.txt  3_check.txt
compiler/tests/snap/full/pi_lambda_identity/: 0_input.splic  1_lex.txt  2_parse.txt  3_check.txt
compiler/tests/snap/full/pi_lambda_in_object/: 0_input.splic  2_parse.txt
compiler/tests/snap/full/pi_lambda_missing_annotation/: 0_input.splic  1_lex.txt  2_parse.txt
compiler/tests/snap/full/pi_lambda_type_mismatch/: 0_input.splic  1_lex.txt  2_parse.txt  3_check.txt
compiler/tests/snap/full/pi_nested/: 0_input.splic  2_parse.txt  3_check.txt
compiler/tests/snap/full/pi_nested_polymorphic/: 1_lex.txt  2_parse.txt  3_check.txt
compiler/tests/snap/full/pi_polycompose/: 0_input.splic  1_lex.txt  2_parse.txt  3_check.txt
compiler/tests/snap/full/pi_polymorphic_id/: 2_parse.txt  3_check.txt  6_stage.txt
compiler/tests/snap/full/pi_repeat/: 0_input.splic  2_parse.txt  3_check.txt
compiler/tests/snap/full/pi_staging_hof/: 0_input.splic  2_parse.txt  3_check.txt
compiler/tests/snap/full/pi_value_dependent_ret/: 0_input.splic  1_lex.txt  2_parse.txt  3_check.txt  6_stage.txt
compiler/tests/snap/full/power/: 1_lex.txt  2_parse.txt  3_check.txt  6_stage.txt
compiler/tests/snap/full/power_acc/: 0_input.splic  1_lex.txt  2_parse.txt  3_check.txt  6_stage.txt
compiler/tests/snap/full/power_simple/: 0_input.splic  (+4 more)
driver/: Cargo.toml  build.rs
driver/src/: lib.rs
driver/tests/: snap.rs
(+461 files in other folders)
