[workspace]
members = ["compiler", "backend/wasm", "driver", "cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
bumpalo = { version = "3", default-features = false }
derive_more = { version = "2", default-features = false }
ref-cast = "1"
bolero = "0.13"
cfg-if = "1"
wasm-encoder = { version = "0.246", default-features = false }
clap = { version = "4", features = ["derive"] }

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
# nursery
branches_sharing_code = "deny"
clear_with_drain = "deny"
debug_assert_with_mut_call = "deny"
derive_partial_eq_without_eq = "deny"
literal_string_with_formatting_args = "deny"
missing_const_for_fn = "deny"
needless_pass_by_ref_mut = "deny"
nonstandard_macro_braces = "deny"
redundant_clone = "deny"
too_long_first_doc_paragraph = "deny"
trait_duplication_in_bounds = "deny"
use_self = "deny"

# restriction
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
cfg_not_test = "deny"
create_dir = "deny"
dbg_macro = "deny"
default_numeric_fallback = "deny"
deref_by_slicing = "deny"
empty_drop = "deny"
float_cmp_const = "deny"
host_endian_bytes = "deny"
if_then_some_else_none = "deny"
indexing_slicing = "deny"
iter_over_hash_type = "deny"
lossy_float_literal = "deny"
mem_forget = "deny"
missing_assert_message = "deny"
mutex_atomic = "deny"
non_zero_suggestions = "deny"
precedence_bits = "deny"
rc_buffer = "deny"
redundant_test_prefix = "deny"
redundant_type_annotations = "deny"
self_named_module_files = "deny"
semicolon_outside_block = "deny"
tests_outside_test_module = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unseparated_literal_suffix = "deny"
unused_trait_names = "deny"
unwrap_used = "deny"

# cargo
cargo = { level = "deny", priority = -1 }
cargo_common_metadata = "allow"

# pedantic
pedantic = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
single_match_else = "allow"

[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1
