[package]
name = "splic-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "splic"
path = "src/main.rs"

[dependencies]
splic-driver = { path = "../driver", features = ["backend-wasm"] }
anyhow.workspace = true
bumpalo.workspace = true
clap.workspace = true
