[package]
name = "splic-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bumpalo.workspace = true
ref-cast.workspace = true

[dev-dependencies]
bolero.workspace = true
expect-test = "1.5"
rstest = "0.26"
