[package]
name = "splic-driver"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
backend-wasm = ["dep:splic-backend-wasm"]

[dependencies]
splic-compiler = { path = "../compiler" }
cfg-if.workspace = true
splic-backend-wasm = { path = "../backend/wasm", optional = true }
anyhow.workspace = true
bumpalo.workspace = true

[dev-dependencies]
splic-driver = { path = ".", features = ["backend-wasm"] }
expect-test = "1.5"
rstest = "0.26"
wasmprinter = { version = "0.248", default-features = false }
